[package]
name = "mtie"
version = "0.1.0"
authors = ["Robin Park <robin.j.park@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mtie"
path = "src/main.rs"

[lib]
name = "mtielib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = "2.33.0"
time-test = "0.2.2"
